--- a/css/trangchu.css
+++ b/css/trangchu.css
@@ -2,78 +2,12 @@ body {
     font-family: 'Maven Pro', sans-serif;
 }
 
-/* Navbar */
-.navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    width: 100%;
-}
-
-.navbar-left {
-    display: flex;
-    align-items: center;
-}
-
-.navbar-center {
-    display: flex;
-    justify-content: center;
-}
-
-.navbar-nav.main-menu {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar-right {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.navbar-nav.right-menu {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 0;
-}
-
-.right-menu li {
-    display: flex;
-    align-items: center;
-}
-
-.signin-li::after {
-    content: "|";
-    margin: 0 5px;
-    color: #333;
-}
-
-.nav-link, .right-menu a {
-    text-decoration: none;
-    color: #333;
-    padding: 8px 12px;
-    border-radius: 4px;
-    transition: all 0.3s ease;
-}
-
-.nav-link:hover, .right-menu a:hover {
-    background-color: #007b5f;
-    color: #fff;
-}
-
 /* Carousel */
 .carousel-item img {
-    height: 400px;
+    width: 100%;
+    height: 600px;
     object-fit: cover;
+    border-bottom: 2px solid #007b5f;
 }
 
 /* Booking Form */
@@ -94,7 +28,6 @@ body {
     width: 100%;
     background: white;
     border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     padding: 0;
     border: 2px solid #007b5f;
 }
@@ -130,6 +63,36 @@ body {
     gap: 25px;
     margin-bottom: 20px;
     flex-wrap: wrap;
+}
+
+.uu-dai-h3 {
+    display:flex;
+    justify-content: center;
+    font-size: 35px;
+}
+
+.dich-vu-bo-tro-h2 {
+    display:flex;
+    justify-content: center;
+    font-size: 35px;
+}
+
+.container-2 {
+    display :flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: center;
+    margin-top:10px;
+    margin-bottom: 15px;
+}
+
+.card a, h2{
+    color: black;
+    outline: none;
+}
+
+.card h5:hover{
+    color:#007b5f;
 }
 
 .type-option {
