--- a/css/Khampha/Uudai.css
+++ b/css/Khampha/Uudai.css
@@ -1,8 +1,8 @@
 body {
-      font-family: "Maven Pro", sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+    font-family: "Maven Pro", sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
 #carouselExampleInterval {
     margin-bottom: 70px;
@@ -23,17 +23,10 @@ body {
 }
 
 .uudai-card {
-    width: 100%;
-    height: auto;
-    box-sizing: border-box;
-    margin-bottom: 30px;
-}
-
-.uudai-card {
     width: 100%; 
     height: auto;
     box-sizing: border-box;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .uudai-card img {
@@ -42,15 +35,25 @@ body {
     object-fit: cover;
 }
 
-.uudai-card .card-body {
-    text-align: right;
-    margin-right: 10px;
-    font-size: 17px;
-    color:rgb(53,123,41);
-    font-weight: 600;
-}
-
 .container-3 {
     display: flex;
     flex-direction: column;
+}
+
+.uudai-card .card-body {
+    text-align: right; 
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.uudai-card .card-body a {
+    text-decoration: none;
+    color: rgb(53, 123, 41);
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.uudai-card .card-text {
+    margin-bottom: 0; 
 }
